Handle ui tools; clean-up Push function
